Closed Bug 1454161 Opened 7 years ago Closed 7 years ago

spidermonkey fails for wasm/gc/anyref.js and wasm/gc/disabled.js when Gecko 61 merges to Beta on 2018-04-26

Categories

(Core :: JavaScript Engine: JIT, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- unaffected
firefox60 --- unaffected
firefox61 + verified

People

(Reporter: aryx, Assigned: bbouvier)

References

Details

Attachments

(1 file)

Fallout from bug 1445277. central-as-beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&revision=4acef5b88f005572ecc9e5c4b467e8929fe40355&group_state=expanded&filter-resultStatus=testfailed&filter-resultStatus=busted&filter-resultStatus=exception&filter-resultStatus=retry&filter-resultStatus=usercancel&filter-resultStatus=runnable&selectedJob=173683310 If you want to test it on Try, import those two patches listed for that Try push. Failure log: https://treeherder.mozilla.org/logviewer.html#?job_id=173683310&repo=try TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/wasm/gc/anyref.js | Error: Invalid long option: --wasm-gc (code 1, args "--wasm-gc") [0.0 s] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/wasm/gc/disabled.js | Error: Invalid long option: --wasm-gc (code 1, args "--wasm-gc") [0.0 s]
Flags: needinfo?(lhansen)
Hm yes, we probably want to recognize this option even if the feature is not enabled, to avoid this problem. We can have a good help text for it in that case, so that users will know it does nothing. Will discuss with Benjamin on Monday.
Assignee: nobody → lhansen
Flags: needinfo?(lhansen)
Attached patch fix.patchSplinter Review
Yes, agreed. I happen to have made this fix in the train this morning.
Assignee: lhansen → bbouvier
Status: NEW → ASSIGNED
Attachment #8968187 - Flags: review?(lhansen)
Comment on attachment 8968187 [details] [diff] [review] fix.patch Review of attachment 8968187 [details] [diff] [review]: ----------------------------------------------------------------- Yeah, ship it.
Attachment #8968187 - Flags: review?(lhansen) → review+
Priority: -- → P1
Pushed by bbouvier@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/44662c81a04d Make --wasm-gc a no-op in non-Nightly builds; r=lth
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: