Bug 1454161: Make --wasm-gc a no-op in non-Nightly builds; r=lth

MozReview-Commit-ID: AynuyMIj9Rz

--HG--
extra : rebase_source : 8f6992520635ad558095ad01fca72d5f6ff39413
extra : amend_source : ff1dba5e050dd9f453a81bab40a9eea2d14b5497